Closed
Bug 135731
Opened 23 years ago
Closed 23 years ago
opening address book crashes mozilla {__1cIDistance6FrknRnsReadingIterator4CH__2_I_: referenced symbol not found}
Categories
(SeaMonkey :: MailNews: Address Book & Contacts, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.0
People
(Reporter: raphael, Assigned: roland.mainz)
Details
(Keywords: crash, regression)
Attachments
(1 file)
|
908 bytes,
patch
|
sfraser_bugs
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (X11; U; SunOS sun4u; en-US; rv:0.9.9+) Gecko/20020315
BuildID: 20020403
When attempting to open the address book mozilla core dumps with the following
error message
ld.so.1: /home/clifford/mozilla/mozilla-bin: fatal: relocation error: file
/home/clifford/mozilla/components/libgklayout.so: symbol
__1cIDistance6FrknRnsReadingIterator4CH__2_I_: referenced symbol not found
Killed
Reproducible: Always
Steps to Reproduce:
1.run mozilla
2.attempt to open address book
3.
Actual Results: mozilla crashes with the error message
ld.so.1: /home/clifford/mozilla/mozilla-bin: fatal: relocation error: file
/home/clifford/mozilla/components/libgklayout.so: symbol
__1cIDistance6FrknRnsReadingIterator4CH__2_I_: referenced symbol not found
Killed
Expected Results: The address book should just open.
Additional info: uname -a gives SunOS willa 5.8 Generic_108528-13 sun4u sparc
SUNW,Ultra-5_10
Comment 1•23 years ago
|
||
I can confirm this bug in the latest 04/05/02 CVS tree I pulled this morning for
my nightly builds. Just wondering does this bug manifest it self in the 0.9.9
release I put out for Solaris?
-dcran-
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•23 years ago
|
||
Ok, I just downloaded the 0.9.9 build I created for Solaris and tested that,
this regression does not exist. You can open the address book fine without a crash.
So this bug exists in trunk only. I have a debug build now and im using dbx to
try and get a trace...
-dcran-
| Assignee | ||
Comment 3•23 years ago
|
||
I assume this is an incarnation of bug 101896 ("Unresolved symbol in
libgkcontent.so when starting mail/news") ...
Comment 4•23 years ago
|
||
Changing owner to jag per gisburns comments.
I will try to mimic gisburns fix for libgkcontent.so in this fix.
Assignee: racham → jaggernaut
Comment 5•23 years ago
|
||
Ok,
Here is the "nm -Cu " output I get on libgklayout.so
this is just for the symbol we are having problems with.....
unsigned Distance(const nsReadingIterator<unsigned short>&,
const nsReadingIterator<unsigned short>&)
[__1cIDistance6FrknRnsReadingIterator4CH__2_I_]
unsigned Distance(const nsReadingIterator<unsigned short>&,
const nsReadingIterator<unsigned short>&)
[__1cIDistance6FrknRnsReadingIterator4CH__rk0_I_]
| Assignee | ||
Comment 6•23 years ago
|
||
The following localtions reference the missing symbols:
-- snip --
% find . -name \*.o | while read i ; do x=$(nm -Cu $i | fgrep
"1cIDistance6FrknRnsReadingIterator4CH") ; if [ "$x" != "" ] ; then echo "
------- $i" ; echo "$x" ; fi ; done
------- ./xul/base/src/tree/src/nsTreeUtils.o
[__1cIDistance6FrknRnsReadingIterator4CH__2_I_]
------- ./xul/base/src/tree/src/nsTreeContentView.o
[__1cIDistance6FrknRnsReadingIterator4CH__rk0_I_]
------- ./xul/base/src/nsTextBoxFrame.o
[__1cIDistance6FrknRnsReadingIterator4CH__rk0_I_]
-- snip --
| Assignee | ||
Updated•23 years ago
|
| Assignee | ||
Comment 8•23 years ago
|
||
| Assignee | ||
Comment 9•23 years ago
|
||
Requesting r=/sr=/a= ...
Comment 10•23 years ago
|
||
nm -C libxpcom.so|grep Distance
[11148] | 1278880| 24|FUNC |GLOB |0 |10 |unsigned Distance(const nsReadingIterator<unsigned short>&,const nsReadingIterator<unsigned short>&)
[__1cIDistance6FrknRnsReadingIterator4CH__rk0_I_]
$ nm -C components/libgklayout.so |grep Distance
[44463] | 0| 0|FUNC |GLOB |0 |UNDEF |unsigned Distance(const nsReadingIterator<unsigned short>&,const nsReadingIterator<unsigned short>&)
[__1cIDistance6FrknRnsReadingIterator4CH__2_I_]
[46168] | 0| 0|FUNC |GLOB |0 |UNDEF |unsigned Distance(const nsReadingIterator<unsigned short>&,const nsReadingIterator<unsigned short>&)
[__1cIDistance6FrknRnsReadingIterator4CH__rk0_I_]
so what's the difference between __2 and __rk0? i think i've seen this before... C++ Language experts?
Summary: opening address book crashes mozilla → opening address book crashes mozilla {__1cIDistance6FrknRnsReadingIterator4CH__2_I_: referenced symbol not found}
Comment 11•23 years ago
|
||
Ok,
I have tested gisburns "patch" and it fixes the problem...
Lets get this checked in to fix this Solaris bustage.
r=dcran
Comment 12•23 years ago
|
||
Comment on attachment 78189 [details] [diff] [review]
Patch for 2002-04-05-08-trunk
a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #78189 -
Flags: approval+
Comment 13•23 years ago
|
||
Comment on attachment 78189 [details] [diff] [review]
Patch for 2002-04-05-08-trunk
sr=sfraser
Attachment #78189 -
Flags: superreview+
Comment 14•23 years ago
|
||
I have asked timeless to check in this patch on my behalf.
Its a 1 line fix for a missing header file.
-dcran-
Comment 15•23 years ago
|
||
Timeless checked in fix and all went fine,
Marking resolved
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 16•23 years ago
|
||
Marking Verified/Fixed per Donnie Cranford's results.
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•