Bug 135731 opening address book crashes mozilla {__1cIDistance6FrknRnsReadingIterator4CH__2_I_: referenced symbol not found patch by Roland.Mainz@informatik.med.uni-giessen.de r=dcran sr=sfraser a=asa (on behalf of drivers) for checkin to the 1.0 trunk