layout/xul/base/src/tree/src/nsTreeUtils.cpp
@@ -36,6 +36,7 @@
  *
  * ***** END LICENSE BLOCK ***** */
 
+#include "nsReadableUtils.h"
 #include "nsTreeUtils.h"
 #include "nsChildIterator.h"
 
